--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "swiper": "5.x",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
@@ -28,13 +30,23 @@
     "@vue/composition-api": "^1.0.0-rc.1",
     "babel-eslint": "^10.1.0",
     "contentful": "^8.1.7",
+    "css-loader": "^5.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
-    "node-sass": "^5.0.0",
+    "postcss": "^8.2.6",
+    "postcss-calc": "^8.0.0",
+    "postcss-each": "^0.10.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-extend": "^1.0.5",
+    "postcss-mixins": "^7.0.3",
+    "postcss-nested": "^5.0.4",
+    "postcss-simple-vars": "^6.0.3",
+    "postcss-utilities": "^0.8.4",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
     "sass-loader": "10.1.1",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
