--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
-    "nuxt": "^2.15.3",
-    "swiper": "^5.2.0",
-    "vue-awesome-swiper": "^4.1.1"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
@@ -36,7 +34,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-vue": "^7.8.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "sass-loader": "^10",
