--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
@@ -25,11 +26,11 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^4.0.1",
+    "@nuxtjs/tailwindcss": "^4.0.2",
     "@vue/composition-api": "^1.0.0-rc.5",
     "babel-eslint": "^10.1.0",
     "contentful": "^8.2.0",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.1.4",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
