--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/gtm": "^2.4.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.3",
