--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,16 @@
     "Blowin",
     "Brux",
     "helendo",
+    "Ikuyo",
     "kinkan",
     "mainimg",
+    "Raita",
     "Saison",
-    "ybap"
+    "Saito",
+    "Segi",
+    "Shiso",
+    "vegi",
+    "ybap",
+    "Yumi"
   ]
 }
