--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint --fix \"**/*.{vue,scss}\" --ignore-path .gitignore",
-    "lint": ""
+    "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
