--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
+    "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint --fix \"**/*.{vue,scss}\" --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style"
